updated periods before slashes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="title" content="Home Page - Liberal Orchard">
 <meta name="description" content="Where the Seeds of Freedom are Planted">
-<link rel="icon" type="image/x-icon" href="/assets/LOblackbg.png">    
+<link rel="icon" type="image/x-icon" href="./assets/LOblackbg.png">    
 <title>Liberal Orchard</title>
-<link rel="stylesheet" href="/stylesheets/standard.css">  
+<link rel="stylesheet" href="./stylesheets/standard.css">  
 </head>
 <body>
 	
@@ -40,7 +40,7 @@
 		  
 		  <div class="w3-col w3-hover-light-gray w3-hover-opacity w3-padding" data-topics="economics,politics,biden">
                     <a href="/bidenomics-a-monthly-review-july-2023.html" class="w3-margin" style="text-decoration: none">
-                        <img class="w3-col w3-round-xlarge" style="width: 98%" src="/assets/Article%20Photos/bidenomicsmain.webp" alt="Liberal Orchard Graphic depicting President Biden with aviator glasses that have dollar signs over the lenses. There is text that says Bidenomics over his mouth with a white square background. In the bottom left corner it states Liberal Orchard. The background is blue.">
+                        <img class="w3-col w3-round-xlarge" style="width: 98%" src="./assets/Article%20Photos/bidenomicsmain.webp" alt="Liberal Orchard Graphic depicting President Biden with aviator glasses that have dollar signs over the lenses. There is text that says Bidenomics over his mouth with a white square background. In the bottom left corner it states Liberal Orchard. The background is blue.">
                       <div class="w3-row" style="margin: 0; margin-left: 4px; margin-right: 4px;">
                         <h3 class="w3-row" style="text-align: left">Bidenomics: A monthly review of the Economy - July</h3>
                         <p class="w3-row w3-left-align">Liberal Orchard's monthly recap of key economic indicators like Inflation, Consumer Debt, and GDP</p>  
@@ -69,6 +69,6 @@
 	</div>
 	<div class="w3-col m2 l3"></div>	
 	<div class="w3-row w3-padding w3-margin"></div>
-	<script src="feed-script.js"></script>
+	<script src="./feed-script.js"></script>
 </body>
 </html>
