--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
 	</div>
 	<div class="w3-col m2 l3"></div>	
 	<div class="w3-row w3-padding w3-margin"></div>
-	<script src="./feed-script.js"></script>
+	<script src="./feed-script.js?v=0.3"></script>
 </body>
 </html>
