added icons, testing name scheme 2

--- a/index.html
+++ b/index.html
@@ -14,16 +14,22 @@
 <meta name="description" content="Where the Seeds of Freedom are Planted">
 <link rel="icon" type="image/x-icon" href="./assets/LOblackbg.png">    
 <title>Liberal Orchard</title>
-<link rel="stylesheet" href="./stylesheets/standard.css">  
+<link rel="stylesheet" href="./stylesheets/standard.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+<script
+  async
+  src="https://widgets.givebutter.com/latest.umd.cjs?acct=x5fKEyTqqYBfVQUy&p=other"
+></script>
+
 </head>
 <body>
 	
 	<!-- NAVIGATION TOP BAR -->
-	<div class="w3-bar w3-main ">
+	<givebutter-widget id="LZNMYL"></givebutter-widget>
+	<div class="w3-bar w3-theme ">
 	  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">Liberal Orchard</a>
-	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-black w3-hover-opacity w3-round-xxlarge">Link 1</a>
-	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-black w3-hover-opacity w3-round-xxlarge">Link 2</a>
-	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-black w3-hover-opacity w3-round-xxlarge">Link 3</a>
+	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-theme" style="padding-top:3px"><img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon"></img></a>
+	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-black w3-hover-opacity w3-round-xxlarge">About</a>
 	</div>
 	
 	<div class="w3-row w3-padding w3-margin"></div>	
@@ -31,7 +37,7 @@
 	<!-- CENTER COLUMN FOR FEED -->
 	<div class="w3-container w3-center w3-margin-top">
 	  <div class="w3-col m2 l3"><br></div>
-	  <div class="w3-col m8 l6 w3-main w3-center w3-leftbar w3-rightbar w3-border-black">
+	  <div class="w3-col m8 l6 w3-theme w3-center w3-leftbar w3-rightbar w3-border-black">
 		  
 		  <!-- articles-->
 		  
@@ -69,6 +75,6 @@
 	</div>
 	<div class="w3-col m2 l3"></div>	
 	<div class="w3-row w3-padding w3-margin"></div>
-	<script src="./feed-script.js?v=0.3"></script>
+	<script src="./feed-script_0.1.js"></script>
 </body>
 </html>
