Changed Json, added logo, clipboard, mug, and share svgs, also index changes

--- a/index.html
+++ b/index.html
@@ -16,36 +16,59 @@
 <title>Liberal Orchard</title>
 <link rel="stylesheet" href="./stylesheets/standard.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
-<script
-  async
-  src="https://widgets.givebutter.com/latest.umd.cjs?acct=x5fKEyTqqYBfVQUy&p=other"
-></script>
 
 </head>
 <body>
 	
 	<!-- NAVIGATION TOP BAR -->
-	<givebutter-widget id="LZNMYL"></givebutter-widget>
-	<div class="w3-bar w3-theme ">
-	  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">Liberal Orchard</a>
-	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-theme" style="padding-top:3px"><img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon"></img></a>
-	  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-black w3-hover-opacity w3-round-xxlarge">About</a>
-	</div>
+	<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="LiberalOrchard" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+	<div class="w3-bar" style="display: flex; align-items: center; justify-content: space-between;">
+		<!-- Left-side Logo and Text -->
+		<div style="display: flex; align-items: center;">
+		  <a href="#" class="w3-bar-item w3-left">
+			<img width="64px" height="64px" src="./assets/Logo_black.svg" alt="Logo">
+		  </a>
+		  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge w3-large">
+			Liberal Orchard
+		  </a>
+		</div>
+		
+		<!-- Right-side Icons and About -->
+		<div style="display: flex; align-items: center;">
+		  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">
+			About
+		  </a>
+		  <a href="#" class="w3-bar-item w3-button w3-hover-theme">
+			<img width="32px" height="32px" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
+		  </a>
+		  <a href="#" class="w3-bar-item w3-button w3-hover-theme">
+			<img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
+		  </a>
+		</div>
+	  </div>
+	  
+	  
+	  
 	
 	<div class="w3-row w3-padding w3-margin"></div>	
 
     <div class="w3-container center-container">
+		<!-- Feed Title-->
+		<div class="w3-row w3-margin-top">
+			<h2 class="w3-text-black" style="text-shadow:1px 1px 0 #444"><b>Under Construction</b></h2>
+		</div>
+
         <!-- Search function -->
-        <div class="w3-row w3-padding">
+        <div class="w3-row w3-padding w3-half">
             <input type="text" id="search-bar" class="w3-input" placeholder="Search articles by title...">
         </div>
 
         <!-- Sort List -->
-        <div class="w3-row button-group-container">
+        <div class="w3-row button-group-container w3-margin-top">
             <div class="button-group w3-card">
                 <button class="button active">Latest</button>
                 <button class="button">Oldest</button>
-                <button class="button">Most Viewed</button>
+                <button class="button">Hot</button>
             </div>
         </div>
     </div>
