--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <meta name="twitter:url" content="http://www.liberalorchard.com/">
 <meta name="twitter:title" content="Liberal Orchard">
 <meta name="twitter:description" content="Where the Seeds of Freedom are Planted">
-<meta name="twitter:image" content="http://www.liberalorchard.com/assets/LOblackbg.png">
+<meta name="twitter:image" content="http://www.liberalorchard.com/assets/Logo_white.svg">
 <meta name="twitter:image:alt" content="The Liberal Orchard logo">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="title" content="Home Page - Liberal Orchard">
 <meta name="description" content="Where the Seeds of Freedom are Planted">
-<link rel="icon" type="image/x-icon" href="./assets/LOblackbg.png">    
+<link rel="icon" type="image/x-icon" href="./assets/logo_icon.png">    
 <title>Liberal Orchard</title>
 <link rel="stylesheet" href="./stylesheets/standard.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
