testing new icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="title" content="Home Page - Liberal Orchard">
 <meta name="description" content="Where the Seeds of Freedom are Planted">
-<link rel="icon" type="image/x-icon" href="./assets/logo_icon.png">    
+<link rel="icon" type="image/x-icon" href="./assets/Logo_white.svg">    
 <title>Liberal Orchard</title>
 <link rel="stylesheet" href="./stylesheets/standard.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
