big boy added articles, comment policy, about us, ads.txt, new images, javascript, and some css changes for nagivation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
 	<!-- NAVIGATION TOP BAR -->
 	<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="LiberalOrchard" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
-	<div class="w3-bar" style="display: flex; align-items: center; justify-content: space-between;">
+	<div class="w3-bar w3-border-bottom" style="display: flex; align-items: center; justify-content: space-between;">
 		<!-- Left-side Logo and Text -->
 		<div style="display: flex; align-items: center;">
 		  <a href="#" class="w3-bar-item w3-left">
@@ -35,13 +35,13 @@
 		
 		<!-- Right-side Icons and About -->
 		<div style="display: flex; align-items: center;">
-		  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">
+		  <a href="./about.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">
 			About
 		  </a>
-		  <a href="#" class="w3-bar-item w3-button w3-hover-theme">
+		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
 			<img width="32px" height="32px" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
 		  </a>
-		  <a href="#" class="w3-bar-item w3-button w3-hover-theme">
+		  <a href="https://www.x.com/LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
 			<img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
 		  </a>
 		</div>
@@ -50,7 +50,6 @@
 	  
 	  
 	
-	<div class="w3-row w3-padding w3-margin"></div>	
 
     <div class="w3-container center-container">
 		<!-- Feed Title-->
@@ -98,7 +97,13 @@
 	  <a href="#" id="next-btn" class="w3-button">&raquo;</a>
 	</div>
 	<div class="w3-col m2 l3"></div>	
-	<div class="w3-row w3-padding w3-margin"></div>
+	<div class="w3-row w3-padding w3-margin-bottom"></div>
+
+
+	<div class="w3-container w3-black w3-padding" style="width: 100%;">
+		<p class="w3-center">@LiberalOrchard</p>
+	</div>
+
 	<script src="./feed-script_0.2.js"></script>
 </body>
 </html>
