--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
 		<p class="w3-center">@LiberalOrchard</p>
 	</div>
 
-	<script src="./feed-script.js"></script>
+	<script src="./feed-script.js?v=1"></script>
 </body>
 </html>
