--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="title" content="Home Page - Liberal Orchard">
 <meta name="description" content="Where the Seeds of Freedom are Planted">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+
 <link rel="icon" type="image/x-icon" href="./assets/Logo_white.svg">    
 <title>Liberal Orchard</title>
 <link rel="stylesheet" href="./stylesheets/standard.css">
