fixed header when small width

--- a/bidenomics-a-monthly-review-july-2023.html
+++ b/bidenomics-a-monthly-review-july-2023.html
@@ -52,11 +52,11 @@
 	<div class="w3-bar w3-border-bottom" style="display: flex; align-items: center; justify-content: space-between;">
 		<!-- Left-side Logo and Text -->
 		<div style="display: flex; align-items: center;">
-		  <a href="#" class="w3-bar-item w3-left">
-			<img width="64px" height="64px" src="./assets/Logo_black.svg" alt="Logo">
+		  <a href="./index.html" class="w3-bar-item w3-left">
+			<img class="logo" src="./assets/Logo_black.svg" alt="Logo">
 		  </a>
 		  <a href="./index.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge w3-large">
-			Liberal Orchard
+			<span class="hide">Liberal Orchard</span> 
 		  </a>
 		</div>
 		
@@ -66,10 +66,10 @@
 			About
 		  </a>
 		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img width="32px" height="32px" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
+			<img class="icon" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
 		  </a>
 		  <a href="https://www.x.com/LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
+			<img class="icon" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
 		  </a>
 		</div>
 	  </div>
