--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <link rel="icon" type="image/x-icon" href="./assets/Logo_white.svg">    
 <title>Liberal Orchard</title>
-<link rel="stylesheet" href="./stylesheets/standard.css">
+<link rel="stylesheet" href="./stylesheets/standard.css?v=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
 
 </head>
@@ -30,10 +30,10 @@
 		<!-- Left-side Logo and Text -->
 		<div style="display: flex; align-items: center;">
 		  <a href="#" class="w3-bar-item w3-left">
-			<img width="64px" height="64px" src="./assets/Logo_black.svg" alt="Logo">
+			<img class="logo" src="./assets/Logo_black.svg" alt="Logo">
 		  </a>
 		  <a href="#" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge w3-large">
-			Liberal Orchard
+			<span class="hide">Liberal Orchard</span> 
 		  </a>
 		</div>
 		
@@ -43,10 +43,10 @@
 			About
 		  </a>
 		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img width="32px" height="32px" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
+			<img class="icon" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
 		  </a>
 		  <a href="https://www.x.com/LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
-			<img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
+			<img class="icon" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
 		  </a>
 		</div>
 	  </div>
