Black logo, articles update, some styling

--- a/bidenomics-a-monthly-review-august-2024.html
+++ b/bidenomics-a-monthly-review-august-2024.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@liberalorchard">
-<meta name="twitter:url" content="http://www.liberalorchard.com/bidenomics-a-monthly-review-july-2023.html">
+<meta name="twitter:url" content="http://www.liberalorchard.com/bidenomics-a-monthly-review-august-2024.html">
 <meta name="twitter:title" content="Bidenomics: A monthly review of the Economy - Liberal Orchard">
 <meta name="twitter:description" content="Liberal Orchard's monthly recap of key economic indicators like Inflation, Consumer Debt, and GDP">
 <meta name="twitter:image" content="https://liberalorchard.com/assets/Article%20Photos/bidenomicsmain.webp">
@@ -85,20 +85,20 @@
         <h3 class="w3-margin-bottom smalltexth3">Liberal Orchard's monthly recap of key economic indicators like Inflation, Consumer Debt, and GDP</h3>
         <img class="w3-image w3-round-large" src="./assets/Article Photos/bidenomics.jpg"></img>
             
-        <p class="w3-text-grey w3-opacity-min w3-margin-top w3-margin-bottom smalltexth3">By Liberal Orchard | July 31st 2023</p>
+        <p class="w3-text-grey w3-opacity-min w3-margin-top w3-margin-bottom smalltexth3">By Liberal Orchard | August 29th 2024</p>
 
             <div class="w3-bar w3-border-bottom w3-margin-bottom articleshares">
                 <div style="display: flex; align-items: center;">
                 <p class="w3-bar-item smalltexth3" style="padding-left: 0px; margin-left: 0;" id="readingtime"></p>
                 </div>
                 <div style="display: flex; align-items: center;">
-                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/bidenomics-a-monthly-review-july-2023.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/bidenomics-a-monthly-review-august-2024.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/bidenomics-a-monthly-review-july-2023.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/bidenomics-a-monthly-review-august-2024.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-facebook-brands-solid.svg" alt="Facebook icon">
                 </a>
-                <a href="http://www.liberalorchard.com/bidenomics-a-monthly-review-july-2023.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
+                <a href="http://www.liberalorchard.com/bidenomics-a-monthly-review-august-2024.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
                     <img width="32px" height="32px" src="./assets/clipboard-regular.svg" alt="Clipboard share icon">
                     <span id="tooltip" style="visibility: hidden; position: absolute; bottom: 100%; left: 50%; transform: translate(-50%, 100%); background-color: #000; color: #fff; padding-bottom: 5px; border-radius: 5px;">Link copied!</span>
                 </a>
@@ -106,6 +106,10 @@
             </div>
 
             <!-- GDP -->
+
+            <p class="articletext w3-margin-top w3-margin-bottom">
+                Woah woah woah welcome back sleepy Joe, it's been a while. Over a year since our last post actually, so lets get you up to date on what has happened. 
+            </p>
 
             <h2 class="w3-margin-top w3-margin-bottom">GDP</h2>
             <p class="articletext">
