fixed meta data of donald detox

--- a/Donald-Detox.html
+++ b/Donald-Detox.html
@@ -4,18 +4,18 @@
 <meta charset="UTF-8">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@liberalorchard">
-<meta name="twitter:url" content="http://www.liberalorchard.com/2024-election-polling.html">
-<meta name="twitter:title" content="Liberal Orchard's 2024 Polling Average">
-<meta name="twitter:description" content="People are complex, models should be simple. So we made one and cut the bs.">
-<meta name="twitter:image" content="https://liberalorchard.com/assets/Article%20Photos/2024-Election.webp">
-<meta name="twitter:image:alt" content="A picture of the statue of liberty and an American flag with text in front of it that reads out Liberal Orchard and below that a black arrow pointing right with a text overlay that says 2024 election.">
+<meta name="twitter:url" content="http://www.liberalorchard.com/Donald-Detox.html">
+<meta name="twitter:title" content="Liberal Orchard's Guide to getting over Trump">
+<meta name="twitter:description" content="A indepth look at what the Trump Presidency really was">
+<meta name="twitter:image" content="https://liberalorchard.com/assets/Article%20Photos/donalddetox.webp">
+<meta name="twitter:image:alt" content="A picture of a cathedral dome with clouds and an angel with the text Liberal Orchard The Donald Detox in the center">
 <!--Twitter Information-->     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="title" content="Liberal Orchard's 2024 Polling Average">
-<meta name="description" content="People are complex, models should be simple. So we made one and cut the bs.">
+<meta name="title" content="Liberal Orchard's Guide to getting over Trump">
+<meta name="description" content="A indepth look at what the Trump Presidency really was">
 <link rel="icon" type="image/x-icon" href="/assets/Logo_white.svg">    
 
-<title>Liberal Orchard's 2024 Polling Average</title>
+<title>Liberal Orchard's Guide to getting over Trump</title>
 <link rel="stylesheet" href="./stylesheets/standard.css?v=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -116,8 +116,8 @@
 	<div class="w3-container center-container w3-margin-bottom">
         <div class="w3-container article-width">
         <h1 class="smalltexth1"><b>2024 Presidential Election Polling</b></h1>
-        <h3 class="w3-margin-bottom smalltexth3">People are complex, models should be simple. So we made one and cut the bs.</h3>
-        <img class="w3-image w3-round-large" src="./assets/Article Photos/2024-Election.webp"></img>
+        <h3 class="w3-margin-bottom smalltexth3">A indepth look at what the Trump Presidency really was</h3>
+        <img class="w3-image w3-round-large" src="./assets/Article Photos/donalddetox.webp"></img>
             
         <p class="w3-text-grey w3-opacity-min w3-margin-top w3-margin-bottom smalltexth3">By Liberal Orchard | September 23rd 2024</p>
 
@@ -126,13 +126,13 @@
                 <p class="w3-bar-item smalltexth3" style="padding-left: 0px; margin-left: 0;" id="readingtime"></p>
                 </div>
                 <div style="display: flex; align-items: center;">
-                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/2024-election-polling.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/Donald-Detox.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/2024-election-polling.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/Donald-Detox.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-facebook-brands-solid.svg" alt="Facebook icon">
                 </a>
-                <a href="http://www.liberalorchard.com/2024-election-polling.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
+                <a href="http://www.liberalorchard.com/Donald-Detox.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
                     <img width="32px" height="32px" src="./assets/clipboard-regular.svg" alt="Clipboard share icon">
                     <span id="cliptooltip" style="visibility: hidden; position: absolute; bottom: 100%; left: 50%; transform: translate(-50%, 100%); background-color: #000; color: #fff; padding-bottom: 5px; border-radius: 5px;">Link copied!</span>
                 </a>
@@ -142,7 +142,7 @@
             <!-- Polling Information -->
 
             <div class="w3-panel w3-pale-red w3-leftbar w3-border-red">
-              <h3>Last Update September 23rd 2024 </h3>
+              <h3>Last Update October 2nd 2024 </h3>
               <p>We will try to keep this updated weekly with the newest polls in our average</p>
             </div>
 
