Updated charts and some rearrangings

--- a/Donald-Detox.html
+++ b/Donald-Detox.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@liberalorchard">
-<meta name="twitter:url" content="http://www.liberalorchard.com/Donald-Detox.html">
+<meta name="twitter:url" content="http://www.liberalorchard.com/donald-detox.html">
 <meta name="twitter:title" content="Liberal Orchard's Guide to getting over Trump">
 <meta name="twitter:description" content="A indepth look at what the Trump Presidency really was">
 <meta name="twitter:image" content="https://liberalorchard.com/assets/Article%20Photos/donalddetox.webp">
@@ -126,13 +126,13 @@
                 <p class="w3-bar-item smalltexth3" style="padding-left: 0px; margin-left: 0;" id="readingtime"></p>
                 </div>
                 <div style="display: flex; align-items: center;">
-                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/Donald-Detox.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/donald-detox.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/Donald-Detox.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/donald-detox.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-facebook-brands-solid.svg" alt="Facebook icon">
                 </a>
-                <a href="http://www.liberalorchard.com/Donald-Detox.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
+                <a href="http://www.liberalorchard.com/donald-detox.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
                     <img width="32px" height="32px" src="./assets/clipboard-regular.svg" alt="Clipboard share icon">
                     <span id="cliptooltip" style="visibility: hidden; position: absolute; bottom: 100%; left: 50%; transform: translate(-50%, 100%); background-color: #000; color: #fff; padding-bottom: 5px; border-radius: 5px;">Link copied!</span>
                 </a>
@@ -142,20 +142,17 @@
             <!-- Polling Information -->
 
             <div class="w3-panel w3-pale-red w3-leftbar w3-border-red">
-              <h3>Last Update October 2nd 2024 </h3>
-              <p>We will try to keep this updated weekly with the newest polls in our average</p>
+              <h3>Last Update October 5th 2024</h3>
+              <p>The Federal Government updates it's data quarterly and can sometimes update information from years ago. Our charts are static and do not change with the newest data so we encourage you to click the links below the charts if you want to double check the information. Common examples of this happening is, Q1-Q2 2022, being a labeled a "technical recession" due to negative growth but in 2024, Q2 2022, was revised to positive. Therefore there was no technical recession.</p>
             </div>
 
-            <h2 class="w3-margin-top w3-margin-bottom">Why did we create an average?</h2>
-            <p class="articletext">
-            It seems as though every year we get pollsters and models telling us they have updated their data, weights, and such only for them to be off consistently. 
-            Although we believe this to be normal, human beings are inherently irrational especially when being asked questions over the phone. We here at liberal orchard 
-            think that the solution to this is not to weight certain models that we deem bad one way or another but to grab the most common/used polls and average them with
-            equal weighting. Why? Because the solution to the irrationality of humans is not to bring in our own subjective and possibly irrational beliefs and mess with data.
-            It's as simple as that, we will be adding a table with all of our included pollsters in the future as well as our methodology (it's pretty short).
+            <h2 class="w3-margin-top w3-margin-bottom">Why am I reading this article?</h2>
+            <p class="articletext"> Still being written but enjoy the charts below</p> 
 
-            </p> 
-
+            <div id="trade-container" style="width: 100%; height: 500px;"></div>
+            <script src="/scripts/chartTrade.js"></script>
+            <div id="rgdp-container" style="width: 100%; height: 500px;"></div>
+            <script src="/scripts/chartRGDP.js"></script>
             <div id="netexp-container" style="width: 100%; height: 500px;"></div>
             <script src="/scripts/chartNextExp.js"></script>
             <div id="medhouse-container" style="width: 100%; height: 500px;"></div>
