--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 		  <a href="./about.html" class="w3-bar-item w3-button w3-hover-black w3-hover-opacity w3-round-xxlarge">
 			About
 		  </a>
+		  <a href="https://github.com/LeopoldN/NewLiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
+			<img class="icon" src="./assets/github.svg" alt="Github icon">
+		  </a>
 		  <a href="http://www.liberal.cafe" target="_blank" class="w3-bar-item w3-button w3-hover-theme">
 			<img class="icon" src="./assets/mug-saucer-solid.svg" alt="Mug icon">
 		  </a>
@@ -108,6 +111,6 @@
 		<p class="w3-center">@LiberalOrchard</p>
 	</div>
 
-	<script src="./feed-script.js?v=5"></script>
+	<script src="./feed-script.js?v=6"></script>
 </body>
 </html>
