--- a/Donald-Detox.html
+++ b/Donald-Detox.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@liberalorchard">
-<meta name="twitter:url" content="http://www.liberalorchard.com/donald-detox.html">
+<meta name="twitter:url" content="http://www.liberalorchard.com/Donald-Detox.html">
 <meta name="twitter:title" content="Liberal Orchard's Guide to getting over Trump">
 <meta name="twitter:description" content="A indepth look at what the Trump Presidency really was">
 <meta name="twitter:image" content="https://liberalorchard.com/assets/Article%20Photos/donalddetox.webp">
@@ -126,13 +126,13 @@
                 <p class="w3-bar-item smalltexth3" style="padding-left: 0px; margin-left: 0;" id="readingtime"></p>
                 </div>
                 <div style="display: flex; align-items: center;">
-                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/donald-detox.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://twitter.com/intent/tweet?url=http://www.liberalorchard.com/Donald-Detox.html&text=I really enjoyed this article from @LiberalOrchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-twitter-brands-solid.svg" alt="Twitter icon">
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/donald-detox.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.liberalorchard.com/Donald-Detox.html&t=I really enjoyed this article from Liberal Orchard" target="_blank" class="w3-bar-item w3-button w3-hover-theme w3-right">
                     <img width="32px" height="32px" src="./assets/square-facebook-brands-solid.svg" alt="Facebook icon">
                 </a>
-                <a href="http://www.liberalorchard.com/donald-detox.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
+                <a href="http://www.liberalorchard.com/Donald-Detox.html" class="w3-bar-item w3-button w3-hover-theme w3-right copy-shares">
                     <img width="32px" height="32px" src="./assets/clipboard-regular.svg" alt="Clipboard share icon">
                     <span id="cliptooltip" style="visibility: hidden; position: absolute; bottom: 100%; left: 50%; transform: translate(-50%, 100%); background-color: #000; color: #fff; padding-bottom: 5px; border-radius: 5px;">Link copied!</span>
                 </a>
